<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="history_image">History Image</string>
    <string name="add_image">Add Image</string>
    <string name="history">History</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="choose_image">Choose Image</string>
    <string name="analyze_image">Analyze Image</string>
    <string name="result_image">Result Image</string>
    <string name="news">News</string>
    <string name="news_image">News Image</string>
</resources>